# cosmic-torrent

./: Cargo.toml  README.md  cosmic-torrent.desktop
.github/workflows/: rust.yml
src/: config.rs  main.rs  torrent_engine.rs
